# restoration_project

./: .gitignore  CLAUDE.md  CLI_USAGE.md  Cargo.toml  STORY_FORMAT_SPEC.md  deploy.sh  first-vision copy.md  first-vision.md  format_comparison.md  index.html  restoration_config copy.json  restoration_config.json  restoration_config.toml  story_template.md  story_template.toml  the_cellar.md  the_cellar.toml
.github/workflows/: deploy.yml
src/: config.rs  errors.rs  game.rs  lib.rs  main.rs  markdown_parser.rs  terminal_ui.rs  ui.rs  ui_trait.rs  web_ui.rs  world.rs
