[package]
name = "restoration_project"
version = "0.1.0"
edition = "2021"
default-run = "restoration"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
terminal_size = "0.3"
ratatui = "0.28"
crossterm = "0.28"

[[bin]]
name = "restoration"
path = "src/main.rs"
