[package]
name = "restoration_project"
version = "0.1.0"
edition = "2021"
default-run = "restoration"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
ratatui = { version = "0.29", default-features = false }

[dependencies.clap]
version = "4.5"
features = ["derive", "env"]
optional = true

[dependencies.terminal_size]
version = "0.3"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.28"
tui-scrollview = "0.5.1"
clap = { version = "4.5", features = ["derive", "env"] }
terminal_size = "0.3"
ratatui = { version = "0.29", features = ["crossterm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratzilla = "0.1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "EventTarget",
  "KeyboardEvent",
  "Window",
  "HtmlElement",
] }
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[[bin]]
name = "restoration"
path = "src/main.rs"
